[package]
name = "ibe_schemes"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
ark-ff = "0.3"
ark-ec = "0.3"
ark-serialize = "0.3"
ark-std = "0.3"
ark-bls12-381 = "0.3"
blake3 = "1.5"

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "full-schemes"
harness = false

[lib]
bench = false
doctest = false
test = false

[[bin]]
name = "ibe_schemes"
bench = false
test = false
