[package]
name = "ibe_schemes"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ark-bls12-381 = "0.5.0"
blake3 = "1.5"
bit-vec = "0.8.0"
digest = "0.10.7"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "affine-mac"
harness = false

[[bench]]
name = "qanizk"
harness = false

[[bench]]
name = "ibkem1"
harness = false

[[bench]]
name = "ibkem2"
harness = false

[lib]
bench = false
doctest = false
test = false

[[bin]]
name = "ibe_schemes"
bench = false
test = false
